# axum-sqlx-basic-example

./: .gitignore  Cargo.toml  data.db
migrations/: 20230103180324_Initial_setup.sql
src/: main.rs
