[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
sqlx = { version = "0.6.2", features = ["sqlite", "macros", "runtime-tokio-rustls"]}
axum = "0.6.1"
clap = { version = "4.0.32", features = ["derive", "env"]}
color-eyre = "0.6.2"
